# sdl3vk

./: .gitattributes  .gitignore  LICENSE  README.md
src/: .gitignore  vcpkg-configuration.json  vcpkg.json
src/umutech/: CMakeLists.txt  CMakePresets.json  Sdl3Vk.slnx  build.ps1  build.sh
src/umutech/Sdl3VkTriangle/: CMakeLists.txt  Sdl3VkTriangle.vcxproj  Sdl3VkTriangle.vcxproj.filters  compile_shaders.cmd  compile_shaders.ps1  compile_shaders.sh
src/umutech/Sdl3VkTriangle++/: CMakeLists.txt  Sdl3VkTriangle++.vcxproj  Sdl3VkTriangle++.vcxproj.filters  compile_shaders.ps1  compile_shaders.sh
src/umutech/Sdl3VkTriangle++/shaders/: triangle++.vert
src/umutech/Sdl3VkTriangle++/src/: main.cpp  vk_triangle.cpp  vk_triangle.h
src/umutech/Sdl3VkTriangle/src/: main.cpp
src/umutech/Sdl3VkTriangle/src/shaders/: triangle.vert
src/umutech/common/: sdl3vk_utils.h
